fix: script, port, and conditionally exlcude datadog if arm

--- a/docker-multi-test/docker-multi-test.csproj
+++ b/docker-multi-test/docker-multi-test.csproj
@@ -14,4 +14,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\docker-multi-test-lib\docker-multi-test-lib.csproj" />
+    </ItemGroup>
+
 </Project>
